--- a/backend/composer.json
+++ b/backend/composer.json
@@ -44,7 +44,8 @@
         "balanced/balanced": "v1.2.0",
         "stripe/stripe-php": "2.*",
         "mailgun/mailgun-php": "~1.7.2",
-        "cocur/slugify": "dev-master"
+        "cocur/slugify": "dev-master",
+        "stof/doctrine-extensions-bundle": "~1.2"
     },
     "require-dev": {
         "phing/phing": "2.5.*",
