--- a/backend/app/config/parameters.vagrant.yml
+++ b/backend/app/config/parameters.vagrant.yml
@@ -41,4 +41,10 @@ parameters:
     domain: powerli.ne
 
     rabbitmq_connections:
-        default: { host: 'localhost', port: 5672, user: 'guest', password: 'guest', vhost: '/' }
+        default:
+            host: 'localhost'
+            port: 5672
+            user: 'guest'
+            password: 'guest'
+            vhost: '/'
+            lazy: true
