--- a/backend/app/config/config_test.yml
+++ b/backend/app/config/config_test.yml
@@ -24,7 +24,7 @@ doctrine:
         connections:
             default:
                 driver:   pdo_sqlite
-                path:     %kernel.cache_dir%/test.db
+                path:     /tmp/powerline-server-test.db
 
 parameters:
     sunlightapi_token: ~
