--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -207,3 +207,14 @@ stof_doctrine_extensions:
         default:
             timestampable: true
             softdeleteable: true
+
+fos_rest:
+    param_fetcher_listener: true
+    body_listener: true
+    format_listener: true
+    view:
+        view_response_listener: 'force'
+        formats:
+            json: true
+        failed_validation: HTTP_BAD_REQUEST
+        empty_content: 204
