--- a/backend/composer.json
+++ b/backend/composer.json
@@ -47,13 +47,14 @@
         "stof/doctrine-extensions-bundle": "~1.2",
         "imgix/imgix-php": "^1.0",
         "guzzlehttp/guzzle": "~6.1",
-        "giggsey/libphonenumber-for-php": "^7.2"
+        "giggsey/libphonenumber-for-php": "^7.2",
+        "friendsofsymfony/rest-bundle": "~1.5"
     },
     "require-dev": {
         "phing/phing": "2.5.*",
         "phpunit/phpunit": "3.7.*",
         "sebastian/phpcpd": "1.4.*",
-        "liip/functional-test-bundle": "1.0.*@dev",
+        "liip/functional-test-bundle": "~1.3",
         "squizlabs/php_codesniffer": "dev-symfony2-standard",
         "nelmio/alice": "1.5.*@dev",
         "behat/symfony2-extension": "*",
@@ -62,7 +63,8 @@
         "behat/mink-browserkit-driver":  "*",
         "polishsymfonycommunity/symfony2-mocker-extension": "*",
         "vipsoft/doctrine-data-fixtures-extension": "*",
-        "intellectsoft-uk/assert": "*"
+        "intellectsoft-uk/assert": "*",
+        "fzaninotto/faker": "^1.5"
     },
     "scripts": {
         "post-install-cmd": [
