--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -216,6 +216,11 @@ fos_rest:
     param_fetcher_listener: true
     body_listener: true
     format_listener: true
+    access_denied_listener:
+        json: true
+    exception:
+        codes:
+          Symfony\Component\Security\Core\Exception\AccessDeniedException: 403
     view:
         view_response_listener: 'force'
         formats:
