--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -215,12 +215,18 @@ civix_core:
 fos_rest:
     param_fetcher_listener: true
     body_listener: true
-    format_listener: true
     access_denied_listener:
         json: true
+    format_listener:
+        rules:
+            -
+                path: ^/api
+                priorities: [ json ]
+                fallback_format: json
     exception:
+        enabled: true
         codes:
-          Symfony\Component\Security\Core\Exception\AccessDeniedException: 403
+            Symfony\Component\Security\Core\Exception\AccessDeniedException: 403
     view:
         view_response_listener: 'force'
         formats:
