Fix group serialization

--- a/backend/app/config/routing_dev.yml
+++ b/backend/app/config/routing_dev.yml
@@ -16,3 +16,4 @@ _main:
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api-doc
+    defaults: { view: default }
