--- a/backend/deployment/ansible/roles/configure/tasks/main.yml
+++ b/backend/deployment/ansible/roles/configure/tasks/main.yml
@@ -109,3 +109,10 @@
     - configure
     - deploy
   copy: src={{ config_js_file }} dest=/srv/config/config.js owner=root group=root mode=644
+
+- name: use app_dev.php
+  tags:
+    - configure
+    - deploy
+  command: mv /srv/{{ project }}/web/app_dev.php /srv/{{ project }}/web/app.php
+  when: dev_env is defined
