--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -213,6 +213,8 @@ civix_core:
     mailgun_public_client: mailgun.public_basic_client
 
 fos_rest:
+    serializer:
+        serialize_null: true
     service:
         view_handler: civix_api.view_handler
     param_fetcher_listener: true
