Add HWI/OAuth bundle

--- a/backend/app/config/parameters.default.yml
+++ b/backend/app/config/parameters.default.yml
@@ -67,3 +67,6 @@ parameters:
     imgix.domain:  powerline-dev.imgix.net
 
     default_api_version: 1
+
+    facebook_client_id: xxx
+    facebook_client_secret: yyy
