--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -247,3 +247,12 @@ jms_serializer:
             KnpPager:
                 namespace_prefix: Knp\Component\Pager
                 path: '%kernel.root_dir%/config/serializer/KnpPager'
+
+hwi_oauth:
+    firewall_names: [mobileuser_security_area]
+    resource_owners:
+        facebook:
+            type:                facebook
+            client_id:           '%facebook_client_id%'
+            client_secret:       '%facebook_client_secret%'
+            scope:               "email"
