--- a/backend/composer.json
+++ b/backend/composer.json
@@ -48,7 +48,8 @@
         "imgix/imgix-php": "^1.0",
         "guzzlehttp/guzzle": "~6.1",
         "giggsey/libphonenumber-for-php": "^7.2",
-        "friendsofsymfony/rest-bundle": "~1.5"
+        "friendsofsymfony/rest-bundle": "~1.5",
+        "hwi/oauth-bundle": "~0.4"
     },
     "require-dev": {
         "phing/phing": "2.5.*",
