--- a/backend/composer.json
+++ b/backend/composer.json
@@ -53,7 +53,10 @@
     },
     "require-dev": {
         "phing/phing": "2.5.*",
-        "phpunit/phpunit": "3.7.*",
+        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit-mock-objects": "~2.0",
+        "phpunit/php-code-coverage": "~2.0",
+        "phpunit/php-token-stream": "~1.0",
         "sebastian/phpcpd": "1.4.*",
         "liip/functional-test-bundle": "~1.3",
         "squizlabs/php_codesniffer": "dev-symfony2-standard",
