--- a/backend/composer.json
+++ b/backend/composer.json
@@ -5,8 +5,7 @@
         "psr-0": { "": "src/" }
     },
     "repositories": [
-        {"type": "vcs", "url": "git@github.com:intellectsoft-uk/PHP_CodeSniffer.git"},
-        {"type": "vcs", "url": "git@github.com:intellectsoft-uk/assert.git"}
+        {"type": "vcs", "url": "git@github.com:intellectsoft-uk/PHP_CodeSniffer.git"}
     ],
     "require": {
         "php": ">=5.4",
@@ -38,9 +37,7 @@
         "jms/serializer-bundle": "0.13.*@dev",
         "vich/uploader-bundle": "0.8.*",
         "knplabs/knp-gaufrette-bundle": "0.2.*",
-        "richsage/rms-push-notifications-bundle": "2.0.x",
         "php-amqplib/rabbitmq-bundle": "~1.9",
-        "balanced/balanced": "v1.2.0",
         "stripe/stripe-php": "2.*",
         "mailgun/mailgun-php": "~1.7.2",
         "cocur/slugify": "dev-master",
@@ -60,14 +57,6 @@
         "sebastian/phpcpd": "1.4.*",
         "liip/functional-test-bundle": "~1.3",
         "squizlabs/php_codesniffer": "dev-symfony2-standard",
-        "nelmio/alice": "1.5.*@dev",
-        "behat/symfony2-extension": "*",
-        "behat/mink": "1.4.*@stable",
-        "behat/mink-extension": "*",
-        "behat/mink-browserkit-driver":  "*",
-        "polishsymfonycommunity/symfony2-mocker-extension": "*",
-        "vipsoft/doctrine-data-fixtures-extension": "*",
-        "intellectsoft-uk/assert": "*",
         "fzaninotto/faker": "^1.5",
         "sebastian/version": "~1.0"
     },
@@ -98,9 +87,6 @@
         "symfony-web-dir": "web",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
-        },
-        "branch-alias": {
-            "dev-master": "2.3-dev"
         }
     }
 }
