Exclude 404s from slack log handler

--- a/backend/app/config/config_dev.yml
+++ b/backend/app/config/config_dev.yml
@@ -28,6 +28,8 @@ monolog:
             token: '%slack_logger_token%'
             channel: "#errors"
             level: error
+            excluded_404s:
+                - ^/
 
 assetic:
     use_controller: false
