--- a/backend/app/config/config_prod.yml
+++ b/backend/app/config/config_prod.yml
@@ -30,3 +30,5 @@ monolog:
             token: '%slack_logger_token%'
             channel: "#errors"
             level: error
+            excluded_404s:
+                - ^/
