--- a/backend/app/config/parameters.default.yml
+++ b/backend/app/config/parameters.default.yml
@@ -47,6 +47,7 @@ parameters:
     stripe_publishable_key:  pk_test_QUgSE3ZhORW9yoDuCkMjnaA2
 
     domain: powerli.ne
+    hostname: api.powerli.ne
 
     rabbitmq_connections:
         default:
