Run cache:clear as user "civix"

--- a/backend/deployment/ansible/roles/deploy/tasks/main.yml
+++ b/backend/deployment/ansible/roles/deploy/tasks/main.yml
@@ -41,5 +41,6 @@
   supervisorctl: name=civix_payments state=started
 
 - name: reset application cache
+  become_user: civix
   tags: deploy
   command: /srv/{{ project }}/app/console cache:clear --env={% if dev_env is defined %}dev{% else %}prod{% endif %} --no-debug
