--- a/backend/app/config/parameters.default.yml
+++ b/backend/app/config/parameters.default.yml
@@ -18,7 +18,7 @@ parameters:
 
     amazon_s3.key: ~
     amazon_s3.secret: ~
-    amazon_s3.region: eu-west-1
+    amazon_s3.region: us-east-1
     amazon_s3.bucket: devpowerline
     amazon_s3.url: /
 
