--- a/backend/app/config/routing_dev.yml
+++ b/backend/app/config/routing_dev.yml
@@ -17,3 +17,8 @@ NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api-doc
     defaults: { view: default }
+
+NelmioSwaggerApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/swagger_routing.yml"
+    prefix:   /swagger
+    defaults: { view: default }
