--- a/backend/deployment/ansible/roles/setup-vagrant/tasks/main.yml
+++ b/backend/deployment/ansible/roles/setup-vagrant/tasks/main.yml
@@ -76,14 +76,30 @@
                  write_priv=.*
                  state=present
 
-- name: composer | install
-  tags: vagrant
-  shell: >
-    curl -sS https://getcomposer.org/installer | php;
+- name: composer | download composer
+  get_url:
+    url: https://getcomposer.org/installer
+    dest: /tmp/installer
+  tags: composer
 
-- name: composer | path fix 
-  tags: vagrant
-  shell: mv composer.phar /usr/local/bin/composer;
+- name: composer | install composer
+  shell: cat /tmp/installer | php -- --install-dir=/usr/local/bin
+  args:
+    creates: /usr/local/bin/composer
+  tags: composer
+
+- name: composer | rename composer.phar to composer
+  shell: mv /usr/local/bin/composer.phar /usr/local/bin/composer
+  args:
+    creates: /usr/local/bin/composer
+  tags: composer
+
+- name: composer | make composer executable
+  file:
+    path: /usr/local/bin/composer
+    mode: a+x
+    state: file
+  tags: composer
 
 - name: ssh | setup known_hosts
   tags: vagrant
@@ -102,4 +118,4 @@
 
 - name: composer | install dependancies
   tags: composer
-  composer: command=install working_dir=/vagrant/backend 
+  composer: command=install working_dir=/vagrant/backend
