Add a scheme for default avatar url's

--- a/backend/app/config/parameters.travis.yml
+++ b/backend/app/config/parameters.travis.yml
@@ -48,6 +48,7 @@ parameters:
 
     domain: powerli.ne
     hostname: api-test.powerli.ne
+    scheme: 'http'
 
     rabbitmq_connections:
         default:
