--- a/backend/app/config/parameters.default.yml
+++ b/backend/app/config/parameters.default.yml
@@ -48,6 +48,7 @@ parameters:
 
     domain: powerli.ne
     hostname: api.powerli.ne
+    scheme: 'http'
 
     rabbitmq_connections:
         default:
