--- a/backend/app/config/config_test.yml
+++ b/backend/app/config/config_test.yml
@@ -26,7 +26,7 @@ parameters:
     sunlightapi_token: ~
     cicero_login: ~
     cicero_password: ~
-    ciceroapi_class: \Civix\CoreBundle\Service\CiceroCalls
+    ciceroapi_class: Civix\CoreBundle\Service\CiceroCalls
     old_sound_rabbit_mq.producer.class: Civix\CoreBundle\Tests\Mock\RabbitMq\Producer
     old_sound_rabbit_mq.connection.class: Civix\CoreBundle\Tests\Mock\RabbitMq\AMQPConnection
 
