--- a/backend/app/config/routing.yml
+++ b/backend/app/config/routing.yml
@@ -21,45 +21,11 @@ civix_front_default:
     type: annotation
     prefix:   /
 
-civix_front_representative_login_check:
-    pattern:  /representative/login_check
-
-civix_representative_logout:
-    pattern:  /representative/logout
-
-civix_front_representative_reg:
-    resource: "@CivixFrontBundle/Controller/RepresentativeController.php"
-    prefix:   /representative
-    type: annotation
-
-civix_front_representative_area:
-    resource: "@CivixFrontBundle/Controller/Representative/"
-    prefix:   /representative
-    type: annotation
-    schemes: %scheme%
-
-civix_front_group_login_check:
-    pattern:  /group/login_check
-
-civix_group_logout:
-    pattern:  /group/logout
-
-civix_front_group:
-    resource: "@CivixFrontBundle/Controller/GroupController.php"
-    prefix:   /group
-    type: annotation
-
-civix_front_group_area:
-    resource: "@CivixFrontBundle/Controller/Group/"
-    prefix:   /group
-    type: annotation
-    schemes: %scheme%
-
 civix_front_superuser_login_check:
-    pattern:  /superuser/login_check
+    path:  /superuser/login_check
 
 civix_superuser_logout:
-    pattern:  /superuser/logout
+    path:  /superuser/logout
 
 civix_front_superuser_area:
     resource: "@CivixFrontBundle/Controller/Superuser/"
@@ -70,11 +36,6 @@ civix_front_superuser_area:
 civix_superuser:
     resource: "@CivixFrontBundle/Controller/SuperuserController.php"
     prefix:   /superuser
-    type: annotation
-
-civix_account:
-    resource: "@CivixFrontBundle/Controller/AccountController.php"
-    prefix:   /account
     type: annotation
 
 NelmioApiDocBundle:
