--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -5,10 +5,10 @@ imports:
 framework:
     #esi:             ~
     #translator:      { fallback: %locale% }
-    secret:          %secret%
+    secret:          '%secret%'
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
-        strict_requirements: %kernel.debug%
+        strict_requirements: '%kernel.debug%'
     form:            true
     csrf_protection: true
     validation:      { enable_annotations: true }
@@ -20,25 +20,25 @@ framework:
 
 # Twig Configuration
 twig:
-    debug:            %kernel.debug%
-    strict_variables: %kernel.debug%
-    form:
-        resources:
-            - 'CivixFrontBundle::fields.html.twig'
-            - 'CivixFrontBundle::imageField.html.twig'
+    debug:            '%kernel.debug%'
+    strict_variables: '%kernel.debug%'
+#    form:
+#        resources:
+#            - 'CivixFrontBundle::fields.html.twig'
+#            - 'CivixFrontBundle::imageField.html.twig'
     globals:
-        stripe_publishable_key: %stripe_publishable_key%
+        stripe_publishable_key: '%stripe_publishable_key%'
 
 # Assetic Configuration
 assetic:
-    debug:          %kernel.debug%
+    debug:          '%kernel.debug%'
     use_controller: false   
     #bundles:        [ ]
     #java: /usr/bin/java
     filters:
         lessphp:
-            file: %kernel.root_dir%/../vendor/leafo/lessphp/lessc.inc.php
-            apply_to: "\.less$"
+            file: '%kernel.root_dir%/../vendor/leafo/lessphp/lessc.inc.php'
+            apply_to: '\.less$'
         cssrewrite: ~
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
@@ -48,18 +48,20 @@ assetic:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   %database_driver%
-        host:     %database_host%
-        port:     %database_port%
-        dbname:   %database_name%
-        user:     %database_user%
-        password: %database_password%
-        charset:  UTF8   
+        driver:   '%database_driver%'
+        host:     '%database_host%'
+        port:     '%database_port%'
+        dbname:   '%database_name%'
+        user:     '%database_user%'
+        password: '%database_password%'
+        charset:  UTF8
+        options:
+            1002:  "SET NAMES 'UTF8'"
         types:
             uuid: Ramsey\Uuid\Doctrine\UuidType
 
     orm:
-        auto_generate_proxy_classes: %kernel.debug%
+        auto_generate_proxy_classes: '%kernel.debug%'
         entity_managers:
             default:
                 auto_mapping: true
@@ -73,10 +75,10 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: %mailer_transport%
-    host:      %mailer_host%
-    username:  %mailer_user%
-    password:  %mailer_password%
+    transport: '%mailer_transport%'
+    host:      '%mailer_host%'
+    username:  '%mailer_user%'
+    password:  '%mailer_password%'
     encryption: 'tls'
     spool:     { type: memory }
     
@@ -96,10 +98,10 @@ knp_paginator:
         sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
 
 ewz_recaptcha:
-    public_key:   %recaptcha_public_key%
-    private_key:  %recaptcha_private_key%
-    locale_key:   %recaptcha_locale_key%
-    enabled:      %recaptcha_enabled%
+    public_key:   '%recaptcha_public_key%'
+    private_key:  '%recaptcha_private_key%'
+    locale_key:   '%recaptcha_locale_key%'
+    enabled:      '%recaptcha_enabled%'
 
 knp_gaufrette:
     stream_wrapper: ~
@@ -107,31 +109,31 @@ knp_gaufrette:
         avatar_image_adapter:
             aws_s3:
                service_id: 'aws_s3.client'
-               bucket_name: %amazon_s3.bucket%
+               bucket_name: '%amazon_s3.bucket%'
                options:
                    directory: 'avatars'
         avatar_source_image_adapter:
             aws_s3:
                 service_id: 'aws_s3.client'
-                bucket_name: %amazon_s3.bucket%
+                bucket_name: '%amazon_s3.bucket%'
                 options:
                     directory: 'avatars/src'
         avatar_representative_adapter:
             aws_s3:
                 service_id: 'aws_s3.client'
-                bucket_name: %amazon_s3.bucket%
+                bucket_name: '%amazon_s3.bucket%'
                 options:
                     directory: 'avatars/representatives'
         educational_image_adapter:
             aws_s3:
                 service_id: 'aws_s3.client'
-                bucket_name: %amazon_s3.bucket%
+                bucket_name: '%amazon_s3.bucket%'
                 options:
                     directory: 'educational'
         blog_post_adapter:
             aws_s3:
                 service_id: 'aws_s3.client'
-                bucket_name: %amazon_s3.bucket%
+                bucket_name: '%amazon_s3.bucket%'
                 options:
                     directory: 'posts'
     filesystems:
@@ -148,8 +150,8 @@ knp_gaufrette:
 
 vich_uploader:
     db_driver: orm
-    gaufrette: true
-    storage: vich_uploader.storage.gaufrette
+#    gaufrette: true
+    storage: gaufrette
     mappings:
         avatar_image:
             uri_prefix: /avatars
@@ -163,6 +165,7 @@ vich_uploader:
             uri_prefix: /avatars/representatives
             upload_destination: avatar_representative_fs
             namer: vich_uploader.namer_uniqid
+            inject_on_load: true
         educational_image:
             uri_prefix: /educational
             delete_on_update: true
@@ -177,7 +180,7 @@ vich_uploader:
             namer: vich_uploader.namer_uniqid
 
 old_sound_rabbit_mq:
-    connections: %rabbitmq_connections%
+    connections: '%rabbitmq_connections%'
     
     # define producers
     producers:
@@ -238,7 +241,7 @@ fos_rest:
         failed_validation: HTTP_BAD_REQUEST
         empty_content: 204
         mime_types:
-            csv: text/csv
+            csv: [ 'text/csv' ]
 
 jms_serializer:
     metadata:
