--- a/backend/app/config/config_test.yml
+++ b/backend/app/config/config_test.yml
@@ -20,28 +20,26 @@ doctrine:
         connections:
             default:
                 driver:   pdo_sqlite
-                path:     /%kernel.cache_dir%/powerline-server-test.db
+                path:     '/%kernel.cache_dir%/powerline-server-test.db'
 
 parameters:
     sunlightapi_token: ~
     cicero_login: ~
     cicero_password: ~
     ciceroapi_class: Civix\CoreBundle\Service\CiceroCalls
-    old_sound_rabbit_mq.producer.class: Civix\CoreBundle\Tests\Mock\RabbitMq\Producer
-    old_sound_rabbit_mq.connection.class: Civix\CoreBundle\Tests\Mock\RabbitMq\AMQPConnection
 
 civix_core:
     mailgun_client: mailgun.test_client
     mailgun_public_client: mailgun.test_client
 
 vich_uploader:
-    storage: civix_core.storage.array
+    storage: '@civix_core.storage.array'
 
 monolog:
     handlers:
         main:
             type:  stream
-            path:  %kernel.logs_dir%/%kernel.environment%.log
+            path:  '%kernel.logs_dir%/%kernel.environment%.log'
             level: info
             channels: [!event]
         push:
