--- a/backend/composer.json
+++ b/backend/composer.json
@@ -2,90 +2,95 @@
     "name": "isdev/civix",
     "description": "Civix",
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-4": { "": "src/" },
+        "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
     "repositories": [
         {"type": "vcs", "url": "git@github.com:intellectsoft-uk/PHP_CodeSniffer.git"}
     ],
     "require": {
-        "php": ">=5.4",
-        "symfony/symfony": "2.3.19",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.2.*",
-        "twig/extensions": "1.0.*",
-        "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.3.*",
-        "symfony/monolog-bundle": "2.7.*",
-        "sensio/distribution-bundle": "2.3.*",
-        "sensio/framework-extra-bundle": "2.3.*",
-        "sensio/generator-bundle": "2.3.*",
+        "php": ">=5.6",
+        "symfony/symfony": "~2.8",
+        "doctrine/orm": "~2.5",
+        "doctrine/doctrine-bundle": "~1.6",
+        "twig/extensions": "~1.0",
+        "symfony/assetic-bundle": "~2.8",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.11",
+        "sensio/distribution-bundle": "~4.0",
+        "sensio/framework-extra-bundle": "~3.0",
+        "sensio/generator-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "doctrine/doctrine-fixtures-bundle": "2.1.*",
-        "doctrine/migrations" : "dev-master",
-        "doctrine/doctrine-migrations-bundle": "dev-master",
-        "jms/security-extra-bundle": "1.5.*",
-        "jms/di-extra-bundle": "1.4.*",
+        "doctrine/doctrine-fixtures-bundle": "~2.3",
+        "doctrine/doctrine-migrations-bundle": "~1.2",
+        "jms/security-extra-bundle": "~1.6",
+        "jms/di-extra-bundle": "~1.8",
 
-        "aws/aws-sdk-php": "2.5.*",
-        "knplabs/knp-menu-bundle": "2.0.*",
-        "knplabs/knp-paginator-bundle": "2.3.*",
-        "mopa/bootstrap-bundle": "~2.3",
-        "twbs/bootstrap": "v2.3.2",
-        "leafo/lessphp": "0.3.*",
-        "excelwebzone/recaptcha-bundle": "2.3.*@dev",
-        "nelmio/api-doc-bundle": "2.12.0",
-        "jms/serializer-bundle": "0.13.*@dev",
-        "vich/uploader-bundle": "0.8.*",
-        "knplabs/knp-gaufrette-bundle": "0.2.*",
+        "aws/aws-sdk-php": "~2.8",
+        "knplabs/knp-menu-bundle": "~2.0",
+        "knplabs/knp-paginator-bundle": "~2.3",
+        "mopa/bootstrap-bundle": "2.3.x-dev",
+        "twbs/bootstrap": "~2.3",
+        "leafo/lessphp": "~0.3",
+        "excelwebzone/recaptcha-bundle": "2.3.x-dev",
+        "nelmio/api-doc-bundle": "~2.13",
+        "jms/serializer-bundle": "~1.1",
+        "vich/uploader-bundle": "~1.3",
+        "knplabs/knp-gaufrette-bundle": "~0.3",
         "php-amqplib/rabbitmq-bundle": "~1.9",
-        "stripe/stripe-php": "~3.1",
-        "mailgun/mailgun-php": "~1.7.2",
-        "cocur/slugify": "dev-master",
+        "stripe/stripe-php": "~2.3",
+        "mailgun/mailgun-php": "~1.7",
+        "cocur/slugify": "~2.3",
         "stof/doctrine-extensions-bundle": "~1.2",
         "imgix/imgix-php": "^1.0",
         "guzzlehttp/guzzle": "~6.1",
-        "giggsey/libphonenumber-for-php": "^7.2",
-        "friendsofsymfony/rest-bundle": "~1.5",
+        "giggsey/libphonenumber-for-php": "~7.2",
+        "friendsofsymfony/rest-bundle": "~2.1",
         "hwi/oauth-bundle": "~0.4",
-        "ramsey/uuid-doctrine": "1.0.1"
+        "ramsey/uuid-doctrine": "1.0.1",
+        "ocramius/proxy-manager": "~1.0",
+        "zendframework/zend-code": "~2.2"
     },
     "require-dev": {
-        "phing/phing": "2.5.*",
-        "phpunit/phpunit": "~4.8",
-        "phpunit/phpunit-mock-objects": "~2.0",
-        "phpunit/php-code-coverage": "~2.0",
+        "phing/phing": "~2.15",
+        "phpunit/phpunit": "~5.5",
+        "phpunit/phpunit-mock-objects": "~3.2",
+        "phpunit/php-code-coverage": "~4.0",
         "phpunit/php-token-stream": "~1.0",
         "sebastian/phpcpd": "1.4.*",
-        "liip/functional-test-bundle": "~1.3",
-        "squizlabs/php_codesniffer": "dev-symfony2-standard",
-        "fzaninotto/faker": "^1.5",
+        "liip/functional-test-bundle": "~1.6",
+        "squizlabs/php_codesniffer": "~2.7",
+        "fzaninotto/faker": "~1.6",
         "sebastian/version": "~1.0"
     },
     "scripts": {
-        "post-install-cmd": [
+        "symfony-scripts": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
             "Mopa\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::postInstallSymlinkTwitterBootstrap"
         ],
+        "post-install-cmd": [
+            "@symfony-scripts"
+        ],
         "post-update-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Mopa\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::postInstallSymlinkTwitterBootstrap"
+            "@symfony-scripts"
         ]
     },
     "config": {
-        "bin-dir": "bin"
+        "platform": {
+            "php": "5.6"
+        }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-assets-install": "symlink",
+        "symfony-bin-dir": "bin",
+        "symfony-var-dir": "var",
         "symfony-web-dir": "web",
+        "symfony-tests-dir": "tests",
+        "symfony-assets-install": "symlink",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         }
