--- a/backend/phpunit.xml.dist
+++ b/backend/phpunit.xml.dist
@@ -2,18 +2,19 @@
 
 <!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
 <phpunit
-    backupGlobals               = "false"
-    backupStaticAttributes      = "false"
-    convertErrorsToExceptions   = "true"
-    convertNoticesToExceptions  = "true"
-    convertWarningsToExceptions = "true"
-    processIsolation            = "false"
-    stopOnFailure               = "false"
-    syntaxCheck                 = "false"
-    bootstrap                   = "bootstrap.php.cache" >
+        backupGlobals               = "false"
+        backupStaticAttributes      = "false"
+        convertErrorsToExceptions   = "true"
+        convertNoticesToExceptions  = "true"
+        convertWarningsToExceptions = "true"
+        processIsolation            = "true"
+        stopOnFailure               = "false"
+        syntaxCheck                 = "false"
+        bootstrap                   = "autoload.php" >
 
     <php>
-        <const name="PHPUNIT_COMPOSER_INSTALL" value="autoload.php"/>
+        <ini name="error_reporting" value="-1" />
+        <server name="KERNEL_DIR" value="app/" />
     </php>
 
     <testsuites>
@@ -26,8 +27,8 @@
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">../src</directory>
             <exclude>
-                <directory suffix=".php">../src/FrontBundle</directory>
-                <directory suffix=".php">../src/LoadBundle</directory>
+                <directory>../src/FrontBundle</directory>
+                <directory>../src/LoadBundle</directory>
             </exclude>
         </whitelist>
     </filter>
