--- a/backend/src/Civix/FrontBundle/Resources/config/services.yml
+++ b/backend/src/Civix/FrontBundle/Resources/config/services.yml
@@ -2,14 +2,14 @@ services:
     civix_front.navbar_menu_builder:
         class: Civix\FrontBundle\Menu\MenuBuilder
         scope: request
-        arguments: [ '@knp_menu.factory', '@security.context' ]
+        arguments: [ '@knp_menu.factory', '@security.token_storage', '@security.authorization_checker' ]
 
 
     civix_front.navbar_main_menu:
         class: Knp\Menu\MenuItem
         factory_service: civix_front.navbar_menu_builder
         factory_method: createMainMenu
-        arguments: [ '@request' ]
+        arguments: [ '@request_stack' ]
         scope: request
         tags:
             - { name: knp_menu.menu, alias: main }
@@ -19,7 +19,7 @@ services:
         class: Knp\Menu\MenuItem
         factory_service: civix_front.navbar_menu_builder
         factory_method: createQuestionMenu
-        arguments: [ '@request' ]
+        arguments: [ '@request_stack' ]
         scope: request
         tags:
             - { name: knp_menu.menu, alias: main }
@@ -28,7 +28,7 @@ services:
         class: Knp\Menu\MenuItem
         factory_service: civix_front.navbar_menu_builder
         factory_method: createQuestionOptions
-        arguments: [ '@request' ]
+        arguments: [ '@request_stack' ]
         scope: request
         tags:
             - { name: knp_menu.menu, alias: main }
@@ -37,7 +37,7 @@ services:
         class: Knp\Menu\MenuItem
         factory_service: civix_front.navbar_menu_builder
         factory_method: createManageMenu
-        arguments: [ '@request' ]
+        arguments: [ '@request_stack' ]
         scope: request
         tags:
             - { name: knp_menu.menu, alias: main }
@@ -46,7 +46,7 @@ services:
         class: Knp\Menu\MenuItem
         factory_service: civix_front.navbar_menu_builder
         factory_method: createMicroPetitionMenu
-        arguments: [ '@request' ]
+        arguments: [ '@request_stack' ]
         scope: request
         tags:
             - { name: knp_menu.menu, alias: main }
@@ -55,7 +55,7 @@ services:
         class: Knp\Menu\MenuItem
         factory_service: civix_front.navbar_menu_builder
         factory_method: createPetitionMenu
-        arguments: [ '@request' ]
+        arguments: [ '@request_stack' ]
         scope: request
         tags:
             - { name: knp_menu.menu, alias: main }
@@ -64,7 +64,7 @@ services:
         class: Knp\Menu\MenuItem
         factory_service: civix_front.navbar_menu_builder
         factory_method: createSettingsMenu
-        arguments: [ '@request' ]
+        arguments: [ '@request_stack' ]
         scope: request
         tags:
             - { name: knp_menu.menu, alias: main }
@@ -73,7 +73,7 @@ services:
         class: Knp\Menu\MenuItem
         factory_service: civix_front.navbar_menu_builder
         factory_method: createGroupUserMenu
-        arguments: [ '@request' ]
+        arguments: [ '@request_stack' ]
         scope: request
         tags:
             - { name: knp_menu.menu, alias: main }        
@@ -84,7 +84,7 @@ services:
         tags:
             - { name: mopa_bootstrap.navbar, alias: frontendNavbar }
         arguments:
-            - { leftmenu: @civix_front.navbar_main_menu= }
+            - { leftmenu: '@civix_front.navbar_main_menu=' }
             - {}
             - {}
 
@@ -94,7 +94,7 @@ services:
         tags:
             - { name: mopa_bootstrap.navbar, alias: questionMenu }
         arguments:
-            - { menu: @civix_front.navbar_question_menu=, options: @civix_front.navbar_question_options= }
+            - { menu: '@civix_front.navbar_question_menu=', options: '@civix_front.navbar_question_options=' }
             - {}
             - {}
 
@@ -104,7 +104,7 @@ services:
         tags:
             - { name: mopa_bootstrap.navbar, alias: manageMenu }
         arguments:
-            - { menu: @civix_front.navbar_manage_menu= }
+            - { menu: '@civix_front.navbar_manage_menu=' }
             - {}
             - {}
 
@@ -114,7 +114,7 @@ services:
         tags:
             - { name: mopa_bootstrap.navbar, alias: microPetitionMenu }
         arguments:
-            - { menu: @civix_front.navbar_micro_petition_menu= }
+            - { menu: '@civix_front.navbar_micro_petition_menu=' }
             - {}
             - {}
 
@@ -124,7 +124,7 @@ services:
         tags:
             - { name: mopa_bootstrap.navbar, alias: petitionMenu }
         arguments:
-            - { menu: @civix_front.navbar_petition_menu= }
+            - { menu: '@civix_front.navbar_petition_menu=' }
             - {}
             - {}
 
@@ -134,7 +134,7 @@ services:
         tags:
             - { name: mopa_bootstrap.navbar, alias: settingsMenu }
         arguments:
-            - { menu: @civix_front.navbar_settings_menu= }
+            - { menu: '@civix_front.navbar_settings_menu=' }
             - {}
             - {}
 
@@ -144,7 +144,7 @@ services:
         tags:
             - { name: mopa_bootstrap.navbar, alias: groupMemberMenu }
         arguments:
-            - { menu: @civix_front.navbar_group_members_menu= }
+            - { menu: '@civix_front.navbar_group_members_menu=' }
             - {}
             - {}
 
