--- a/backend/composer.json
+++ b/backend/composer.json
@@ -5,64 +5,60 @@
         "psr-4": { "": "src/" },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
-    "repositories": [
-        {"type": "vcs", "url": "git@github.com:intellectsoft-uk/PHP_CodeSniffer.git"}
-    ],
     "require": {
-        "php": ">=5.6",
-        "symfony/symfony": "~2.8",
+        "php": ">=7",
+        "symfony/symfony": "~3.2",
         "doctrine/orm": "~2.5",
         "doctrine/doctrine-bundle": "~1.6",
-        "twig/extensions": "~1.0",
+        "twig/extensions": "~1.4",
         "symfony/assetic-bundle": "~2.8",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.11",
-        "sensio/distribution-bundle": "~4.0",
+        "symfony/swiftmailer-bundle": "~2.4",
+        "symfony/monolog-bundle": "~3.0",
+        "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "~3.0",
-        "sensio/generator-bundle": "~3.0",
-        "incenteev/composer-parameter-handler": "~2.0",
+        "sensio/generator-bundle": "~3.1",
+        "incenteev/composer-parameter-handler": "~2.1",
         "doctrine/doctrine-fixtures-bundle": "~2.3",
         "doctrine/doctrine-migrations-bundle": "~1.2",
         "jms/security-extra-bundle": "~1.6",
         "jms/di-extra-bundle": "~1.8",
 
         "aws/aws-sdk-php": "~2.8",
-        "knplabs/knp-menu-bundle": "~2.0",
-        "knplabs/knp-paginator-bundle": "~2.3",
+        "knplabs/knp-menu-bundle": "~2.1",
+        "knplabs/knp-paginator-bundle": "~2.5",
         "mopa/bootstrap-bundle": "~3.1",
         "twbs/bootstrap": "~2.3",
-        "leafo/lessphp": "~0.3",
-        "excelwebzone/recaptcha-bundle": "2.3.x-dev",
+        "leafo/lessphp": "~0.5",
+        "excelwebzone/recaptcha-bundle": "3.0.x-dev",
         "nelmio/api-doc-bundle": "~2.13",
         "jms/serializer-bundle": "~1.1",
-        "vich/uploader-bundle": "~1.3",
+        "vich/uploader-bundle": "~1.4",
         "knplabs/knp-gaufrette-bundle": "~0.3",
-        "php-amqplib/rabbitmq-bundle": "~1.9",
+        "php-amqplib/rabbitmq-bundle": "~1.12",
         "stripe/stripe-php": "~2.3",
         "mailgun/mailgun-php": "~1.7",
         "cocur/slugify": "~2.3",
         "stof/doctrine-extensions-bundle": "~1.2",
-        "imgix/imgix-php": "^1.0",
-        "guzzlehttp/guzzle": "~6.1",
-        "giggsey/libphonenumber-for-php": "~7.2",
+        "imgix/imgix-php": "~1.0",
+        "guzzlehttp/guzzle": "~6.2",
+        "giggsey/libphonenumber-for-php": "~8.0",
         "friendsofsymfony/rest-bundle": "~2.1",
-        "hwi/oauth-bundle": "~0.4",
+        "hwi/oauth-bundle": "~0.5",
         "ramsey/uuid-doctrine": "1.0.1",
-        "ocramius/proxy-manager": "~1.0",
-        "zendframework/zend-code": "~2.2"
+        "ocramius/proxy-manager": "2.0.4"
     },
     "require-dev": {
-        "phing/phing": "~2.15",
-        "phpunit/phpunit": "~5.5",
-        "phpunit/phpunit-mock-objects": "~3.2",
+        "phing/phing": "~2.16",
+        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit-mock-objects": "~3.4",
         "phpunit/php-code-coverage": "~4.0",
-        "phpunit/php-token-stream": "~1.0",
-        "sebastian/phpcpd": "1.4.*",
+        "phpunit/php-token-stream": "~1.4",
+        "sebastian/phpcpd": "~2.0",
         "liip/functional-test-bundle": "~1.6",
         "squizlabs/php_codesniffer": "~2.7",
         "fzaninotto/faker": "~1.6",
-        "sebastian/version": "~1.0",
-        "symfony/phpunit-bridge": "^3.2"
+        "sebastian/version": "~2.0",
+        "symfony/phpunit-bridge": "~3.2"
     },
     "scripts": {
         "symfony-scripts": [
@@ -82,7 +78,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.6"
+            "php": "7.0"
         }
     },
     "extra": {
