--- a/backend/deployment/ansible/roles/setup-vagrant/tasks/main.yml
+++ b/backend/deployment/ansible/roles/setup-vagrant/tasks/main.yml
@@ -1,3 +1,11 @@
+- name: php repo
+  tags: setup
+  apt_repository: repo='ppa:ondrej/php' update_cache=yes
+
+- name: update apt
+  tags: vagrant
+  apt: update_cache=yes
+
 - lineinfile:
     dest: /etc/environment
     line: 'SYMFONY__KERNEL__CACHE_DIR=/dev/shm/powerline/cache/%kernel.environment%'
@@ -17,15 +25,18 @@
     - vim
     - git
     - nginx
-    - php5
-    - php5-common
-    - php5-fpm
-    - php5-cli
-    - php5-curl
-    - php5-gd
-    - php5-mysql
-    - php5-sqlite
-    - php5-intl
+    - php7.0
+    - php7.0-common
+    - php7.0-fpm
+    - php7.0-cli
+    - php7.0-curl
+    - php7.0-gd
+    - php7.0-mysql
+    - php7.0-sqlite3
+    - php7.0-intl
+    - php7.0-bcmath
+    - php7.0-xml
+    - php7.0-mbstring
     - supervisor
     - rabbitmq-server
     - mysql-server-5.6
@@ -117,5 +128,6 @@
     chdir: /vagrant/backend 
 
 - name: composer | install dependancies
+  become_user: civix
   tags: composer
   composer: command=install working_dir=/vagrant/backend
