--- a/backend/deployment/ansible/roles/setup/tasks/main.yml
+++ b/backend/deployment/ansible/roles/setup/tasks/main.yml
@@ -8,21 +8,24 @@
 
 - name: php repo
   tags: setup
-  apt_repository: repo='ppa:ondrej/php5' update_cache=yes
+  apt_repository: repo='ppa:ondrej/php' update_cache=yes
 
 - name: install project dependencies
   apt: pkg={{ item }} state=latest
   tags: setup
   with_items:
     - nginx
-    - php5
-    - php5-common
-    - php5-fpm
-    - php5-cli
-    - php5-curl
-    - php5-gd
-    - php5-mysql
-    - php5-sqlite
-    - php5-intl
+    - php7.0
+    - php7.0-common
+    - php7.0-fpm
+    - php7.0-cli
+    - php7.0-curl
+    - php7.0-gd
+    - php7.0-mysql
+    - php7.0-sqlite3
+    - php7.0-intl
+    - php7.0-bcmath
+    - php7.0-xml
+    - php7.0-mbstring
     - supervisor
     - rabbitmq-server
